disable unreleased sections for day 1

--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -41,9 +41,9 @@
 				<ul class="header-nav">
 					<a href="index.html"><li{% if filename=='index.html' %} class="active"{% endif %}>Introduction</li></a>
                     <a href="makeup.html"><li{% if filename=='makeup.html' %} class="active"{% endif %}>Makeup of the Class</li></a>
-                    <a href="admissions.html"><li{% if filename=='admissions.html' %} class="active"{% endif %}>Admissions</li></a>
+                    {#<a href="admissions.html"><li{% if filename=='admissions.html' %} class="active"{% endif %}>Admissions</li></a>
                     <a href="academics.html"><li{% if filename=='academics.html' %} class="active"{% endif %}>Academics/Extracurriculars</li></a>
-                    <a href="lifestyle.html"><li{% if filename=='lifestyle.html' %} class="active"{% endif %}>Beliefs/Lifestyle</li></a>
+                    <a href="lifestyle.html"><li{% if filename=='lifestyle.html' %} class="active"{% endif %}>Beliefs/Lifestyle</li></a>#}
 				</ul>
 			</div>
 		</header>
