--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -101,8 +101,12 @@
             </li>
         </ul>
         <ul class="tab-panes">
-            <li id="regions-outer" class="clearfix active">
-                <div id="regions-inner">
+            <li id="regions-outer" class="active">
+                <div id="regions-inner" class="clearfix">
+                    <div id="year-switch">
+                        <div class="year-switch-option" data-year="">2017</div><div
+                            class="year-switch-option selected" data-year="2018">2018</div>
+                    </div>
                     <div id="paper">
                         <p>Forty-one percent of incoming freshmen come from the Northeast, with Westerners, Midwesterners, Southeasterners, and Southwesterners following in descending order. An additional 11 percent of surveyed freshmen hail from abroad.</p>
                     </div>
@@ -178,6 +182,93 @@
                                 of students from the West expect to return after graduating.
                             </h3>
                         </div>                              
+
+
+
+                        <div id="northeast2018" class="region">
+                            <h3>
+                                <div class="region-stat">43.1%</div>
+                                of students are from the Northeast.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">70.7%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">34.7%</div>
+                                of students from the Northeast have a relative that went to Harvard College.
+                            </h3>
+                        </div>
+                        <div id="southeast2018" class="region">
+                            <h3>
+                                <div class="region-stat">10.6%</div>
+                                of students are from the Southeast.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">2.6%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">20.3%</div>
+                                of students from the Southeast have a relative that went to Harvard College.
+                            </h3>
+                        </div>
+                        <div id="midwest2018" class="region">
+                            <h3>
+                                <div class="region-stat">11.0%</div>
+                                of students are from the Midwest.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">2.3%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">22.8%</div>
+                                of students from the Midwest have a relative that went to Harvard College.
+                            </h3>
+                        </div>
+                        <div id="southwest2018" class="region">
+                            <h3>
+                                <div class="region-stat">6.8%</div>
+                                of students are from the Southwest.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">2.4%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">21.8%</div>
+                                of students from the Southwest have a relative that went to Harvard College.
+                            </h3>
+                        </div>
+                        <div id="west2018" class="region">
+                            <h3>
+                                <div class="region-stat">16.9%</div>
+                                of students are from the West.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">14.2%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">24.6%</div>
+                                of students from the West have a relative that went to Harvard College.
+                            </h3>
+                        </div>
+                        <div id="outside2018" class="region">
+                            <h3>
+                                <div class="region-stat">11.6%</div>
+                                of students are from outide the US.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">7.8%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">14.9%</div>
+                                of students from outside the US have a relative that went to Harvard College.
+                            </h3>
+                        </div>
                     </div>                              
                 </div>
             </li>
