--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -19,7 +19,7 @@
 				<div class="card" id="makeup1" data-destination="makeup.html"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="makeup2" data-destination="http://www.thecrimson.com/article/2013/9/3/freshmen-employment-demographics-geography"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
-			{#<div class="survey-section">
+			<div class="survey-section">
 				<div class="subhead">Admissions</div>
 				<div class="card" id="admissions1" data-destination="admissions.html"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="admissions2" data-destination="http://www.thecrimson.com/article/2013/9/4/freshman-survey-admissions-aid/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
@@ -35,7 +35,7 @@
 				<div class="subhead">Lifestyle</div>
 				<div class="card" id="sex1" data-destination="lifestyle.html"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="sex2" data-destination="http://www.thecrimson.com/article/2013/9/6/freshman-survey-part-iv/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
-			</div>#}
+			</div>
 		</div>
 	</div>
 	<div style="clear: both"></div>
