--- a/compiled_html/css/fresh.css
+++ b/compiled_html/css/fresh.css
@@ -138,11 +138,11 @@ header h1 {
 }
 
 #sex1 {
-	background-image: url('../img/sex1.jpeg');
+	background-image: url('../img/lifestyle_left_grey.jpeg');
 }
 
 #sex2 {
-	background-image: url('../img/sex2.jpeg');
+	background-image: url('../img/lifestyle_right_grey.jpeg');
 }
 
 .section-container {
