Added some charts

--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -33,7 +33,7 @@
                 <a href="#athletics-tab" data-toggle="tab">Athletes</a>
             </li>
             <li>
-                <a href="#athletes-vs-race-tab" data-toggle="tab">Athletes' Ethnicity</a>
+                <a href="#athletes-vs-income-tab" data-toggle="tab">Athletes' Family Incomes</a>
             </li>
             <li>
                 <a href="#sexuality-tab" data-toggle="tab">Sexual Orientation</a>
@@ -61,9 +61,9 @@
                 <div id="athletes-raw" class="graph"></div>
                 <p>Recruited athletes represent 12 percent of the Class of 2017, and among non-recruited students, 9 percent plan to walk on to a varsity team. Harvard does not offer athletic scholarships to its recruited athletes or give out merit scholarships of any kind.</p>
             </li>
-            <li id="athletes-vs-race-tab">
-                <h2>Recruited Athletes by Ethnicity</h2>
-                <div id="athletes-vs-race" class="graph"></div>
+            <li id="athletes-vs-income-tab">
+                <h2>Recruited Athletes by Family Income</h2>
+                <div id="athletes-vs-income" class="graph"></div>
                 <p>Students of white or African-American ethnicities are overrepresented among recruited athletes. While white students make up 62 percent of the freshman student body, according to the survey, they make up 79 percent of freshman recruited athletes. Similarly, while African-American students constitute 10 percent of freshmen, they represent 13 percent of recruited athletes in the class. On the other hand, recruited athletes of Asian descent are an underrepresented demographic. While Asian students constitute 25 percent of the freshman population, they make up just 13 percent of recruited athletes in the freshman class.</p>
             </li>
             <li id="sexuality-tab">
