fix relative paths for static assets

--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -5,6 +5,8 @@
 
 		<title>The Harvard Crimson | Class of 2017</title>
 
+        <base href="http://localhost:8000/compiled_html/">
+
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700|Crimson|Colaborate" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="css/fresh.css">
 		<link rel="stylesheet" type="text/css" href="css/fonts.css">
