--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -21,20 +21,20 @@
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Admissions</div>
-				<div class="card" id="admissions1" data-destination="admissions/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="admissions2" data-destination="http://www.thecrimson.com/article/2013/9/4/freshman-survey-admissions-aid/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="admissions1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card" id="admissions2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 		<div class="section-container">
 			<div class="survey-section">
 				<div class="subhead">Academics</div>
-				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="ac2" data-destination="http://www.thecrimson.com/article/2013/9/5/freshman-survey-academics-extracurriculars/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="ac1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card" id="ac2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Lifestyle</div>
-				<div class="card" id="sex1" data-destination="lifestyle/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="sex2" data-destination="http://www.thecrimson.com/article/2013/9/6/freshman-survey-part-iv/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="sex1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card" id="sex2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 	</div>
