--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -41,7 +41,7 @@
 					<img src="img/logo.png" height="18" width="215" />
 				</a>
 				<ul class="header-nav">
-					<a href="index/"><li{% if filename=='index' %} class="active"{% endif %}>Introduction</li></a>
+					<a href=""><li{% if filename=='index' %} class="active"{% endif %}>Introduction</li></a>
                     <a href="makeup/"><li{% if filename=='makeup' %} class="active"{% endif %}>Makeup of the Class</li></a>
                     {#<a href="admissions/"><li{% if filename=='admissions' %} class="active"{% endif %}>Admissions</li></a>
                     <a href="academics/"><li{% if filename=='academics' %} class="active"{% endif %}>Academics/Extracurriculars</li></a>
