add legacy charts

--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -42,6 +42,18 @@
             <li>
                 <a href="#school-type-tab" data-toggle="tab">Secondary School</a>
             </li>
+            <li>
+                <a href="#legacy-community-tab" data-toggle="tab">Legacy by Community</a>
+            </li>
+            <li>
+                <a href="#legacy-income-tab" data-toggle="tab">Legacy by Income</a>
+            </li>
+            <li>
+                <a href="#legacy-tab" data-toggle="tab">Legacy</a>
+            </li>
+            <li>
+                <a href="#legacy-secondary-school-tab" data-toggle="tab">Legacy by Secondary School</a>
+            </li>
         </ul>
         <ul class="tab-panes">
             <li id="gender-tab" class="active">
@@ -78,6 +90,26 @@
                 <h2>Secondary School</h2>
                 <div id="school-type" class="graph"></div>
                 <p>Sixty-one percent of surveyed freshmen said they attended a public high school, with the overwhelming majority of them at a non-charter school. Thirty-eight percent said they went to a private secondary school, with three quarters of those respondents saying they attended a non-denominational private school.</p>
+            </li>
+            <li id="legacy-community-tab">
+                <h2>Legacy by Community</h2>
+                <div id="legacy-community" class="graph"></div>
+                <p>Twenty-one percent of survey respondents from urban areas reported that they had at least one parent attend Harvard College, compared to 16 percent of the entire freshman class. Only 8 percent of rural residents indicated that either parent was a Harvard undergraduate.</p>
+            </li>
+            <li id="legacy-income-tab">
+                <h2>Legacy by Family Income</h2>
+                <div id="legacy-income" class="graph"></div>
+                <p>Freshmen who reported higher family incomes were more likely to have a parent that once attended Harvard College. No surveyed freshman with a parental income of less than $40,000 said that his or her parent went to Harvard College, while 37 percent of those with a parental income of more than $500,000 said that at least one of their parents went to Harvard College. According to the College’s website, applicants with at least one parent alumnus “may receive an additional look” in the admissions process.</p>
+            </li>
+            <li id="legacy-tab">
+                <h2>Legacy</h2>
+                <div id="legacy" class="graph"></div>
+                <p>Twenty-seven percent of respondents said that they someone in their immediate or extended family attended Harvard College. Close to 16 percent reported that at least one of their parents was a Harvard Undergraduate, thus they are considered legacies by the College. Applications from members of this group “may receive an additional look” in the admissions process, according to the College.</p>
+            </li>
+            <li id="legacy-secondary-school-tab">
+                <h2>Legacy by Secondary School</h2>
+                <div id="legacy-secondary-school" class="graph"></div>
+                <p>Twenty-two percent of respondents who attended a private secondary school said at least one of their parents attended Harvard College. Only 12 percent of respondents attended a public secondary school said the same.</p>
             </li>
         </ul>
     </div>
