--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -16,8 +16,8 @@
 {% block content %}
     <div class="intro scroll-row">
         <div id="subhead">Makeup of the Class</div>
-        <p>Like most incoming Harvard classes, the Class of 2017 is among the College&#39;s most diverse ever. Men expect to earn more money than women do. Recruited athletes tend to identify as heterosexual and either white or African-American. And most of the class arrives in Cambridge as seasoned suburbanites, many of whom are intent on remaining in the Northeast. The Crimson’s survey of nearly 80 percent of the freshman class shows that while the College’s claims of diversity ring true, many of the fresh faces on campus flock together in a predictable fashion.</p>
-        <p>Read Part I of The Crimson's four-part series on the freshman survey <a href="http://www.thecrimson.com/article/2013/9/3/freshmen-employment-demographics-geography">here</a>.</p> </div> 
+        <p>The Class of 2018 arrives in Cambridge from all walks of life and corners of the country, but a quarter of those surveyed have at least one thing in common: an immediate or extended family member that has walked these brick sidewalks and wood-paneled halls before. Of those students, 16 percent are considered legacies, meaning they have at least one parent who attended the College and may have gotten a leg up in the admissions process because of it. As a whole, The Crimson's survey of roughly 70 percent of incoming freshmen reveals a class that is in line with trends toward greater ethnic diversity, high combined family income, and shifting career ambitions.</p>
+        <p>Read Part I of The Crimson's five-part series on the freshman survey <a href="http://www.thecrimson.com/article/2014/9/2/freshman-survey-part-i/">here</a>.</p> </div>
     <div class="scroll-row">
         <h1>Demographics</h1>
         <ul class="nav nav-tabs">
