--- a/compiled_html/css/fresh.css
+++ b/compiled_html/css/fresh.css
@@ -198,6 +198,14 @@ header h1 {
 	background-color: rgba(186, 6, 0, 0.6);
 }
 
+.survey-section > div.card-disabled {
+    cursor: default;
+}
+
+.survey-section > div.card-disabled > .text {
+    background-color: rgba(15, 15, 15, 0.6);
+}
+
 .survey-section > div.card > .text > span {
 	position: relative;
 	left: 10px;
