--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -21,20 +21,20 @@
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Admissions</div>
-				<div class="card" id="admissions1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="admissions2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card card-disabled" id="admissions1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card card-disabled" id="admissions2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 		<div class="section-container">
 			<div class="survey-section">
 				<div class="subhead">Academics</div>
-				<div class="card" id="ac1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="ac2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card card-disabled" id="ac1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card card-disabled" id="ac2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Lifestyle</div>
-				<div class="card" id="sex1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="sex2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card card-disabled" id="sex1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card card-disabled" id="sex2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 	</div>
