--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -305,7 +305,7 @@
             <li id="urbanity-tab">
                 <h2>Community Type</h2>
                 <div id="urbanity"></div>
-                <p>Sixty-four percent of surveyed freshmen come from a suburban community, with urban and rural residents following at 28 and 8 percent, respectively[l]. In comparison, 71 percent of Americans surveyed in the 2010 U.S. census reported that they live in cities, 10 percent in suburbs, and 19 percent in rural regions.</p>
+                <p>Sixty-four percent of surveyed freshmen come from a suburban community, with urban and rural residents following at 28 and 8 percent, respectively. In comparison, 71 percent of Americans surveyed in the 2010 U.S. census reported that they live in cities, 10 percent in suburbs, and 19 percent in rural regions.</p>
             </li>
         </ul>
     </div>
@@ -339,7 +339,7 @@
             <li id="starting-salary-tab" class="active">
                 <h2>Anticipated Starting Salary</h2>
                 <div id="starting-salary" class="graph"></div>
-                <p>Half of the Class of 2017 expects to earn a starting salary of between $50,000 and $90,000 right after graduation. The majority of the remaining half expects salaries below $50,000 that first year. Forty-two percent of respondents said they expect to earn a starting salary greater than $70,000. Only 38 percent of respondents to last year’s Class of 2017 survey said they expected to earn such a salary.</p>
+                <p>Half of the Class of 2018 expects to earn a starting salary of between $50,000 and $90,000 right after graduation. The majority of the remaining half expects salaries below $50,000 that first year. Forty-two percent of respondents said they expect to earn a starting salary greater than $70,000. Only 38 percent of respondents to last year’s Class of 2017 survey said they expected to earn such a salary.</p>
             </li>
             <li id="starting-salary-vs-gender-tab">
                 <h2>Anticipated Starting Salary by Gender</h2>
@@ -351,9 +351,9 @@
 </p>
             </li>
             <li id="sector-start-over-time-tab">
-                <h2>Comparison of Anticipated Employment Field in 2017 and 2027</h2>
+                <h2>Comparison of Anticipated Employment Field Immediately After Graduation and Ten Years Out</h2>
                 <div id="sector-start-over-time" class="graph"></div>
-                <p>Many surveyed freshmen said they expect their immediate post-graduate job to be different from their career 10 years down the line. For example, while just 6 percent of surveyed freshmen said they plan to work in the health field right after graduation, nearly a quarter of them said they anticipate doing so in 2027.</p>
+                <p>Many surveyed freshmen said they expect their immediate post-graduate job to be different from their career 10 years down the line. For example, while just 4 percent of surveyed freshmen said they plan to work in government or politics immediately after graduation, 13 percent of them said they anticipate doing so in 2028.</p>
             </li>
             <li id="sector-start-by-gender-tab">
                 <h2>Anticipated Employment Field by Gender</h2>
@@ -361,9 +361,9 @@
                 <p>Like those surveyed in last year’s freshman survey, female freshmen are less likely than their male counterparts to see themselves in a job related to entrepreneurship or finance after they graduate. They were more likely than men to envision themselves going to graduate or professional school and pursuing jobs in health and media or publishing.</p>
             </li>
             <li id="sector-start-by-school-type-tab">
-                <h2>Anticipated Career by Secondary School Type</h2>
+                <h2>Anticipated Post-Graduate Occupation by Secondary School Type</h2>
                 <div id="sector-start-by-school-type" class="graph"></div>
-                <p>Surveyed freshmen who attended public high school were more likely than their private-school counterparts to say they plan to go to graduate school or professional school after College. They are also more likely to pursue a job in the public sector, with 5 percent saying they plan on working in government or politics after graduation[q][r][s]. On the other hand, those from private school backgrounds were more likely to say they would pursue a job in finance following graduation.</p>
+                <p>Surveyed freshmen who attended public high school were more likely than their private-school counterparts to say they plan to go to graduate school or professional school after College. They are also more likely to pursue a job in the public sector, with 5 percent saying they plan on working in government or politics after graduation. On the other hand, those from private school backgrounds were more likely to say they would pursue a job in finance following graduation.</p>
             </li>
         </ul>
     </div>
