--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -64,7 +64,7 @@
             <li id="race-tab">
                 <h2>Ethnicity</h2>
                 <div id="race" class="graph"></div>
-                <p>Sixty percent of surveyed freshmen said they attended a public high school, with the overwhelming majority of them at a non-charter school. Forty percent said they went to a private secondary school, with more than three fifths of those respondents saying they attended a non-denominational private school.</p>
+                <p>White students make up the largest portion of the Class of 2018—62 percent of respondents identified as such. Twenty-nine percent of respondents identified as Asian, including people of Indian descent. The data indicates that the ethnic composition of the Class of 2018 is largely congruent to that of the Class of 2017.</p>
             </li>
             <li id="athletics-tab">
                 <h2>Athletics</h2>
@@ -99,7 +99,7 @@
             <li id="legacy-income-tab">
                 <h2>Legacy by Family Income</h2>
                 <div id="legacy-income" class="graph"></div>
-                <p>Freshmen who reported higher family incomes were more likely to have a parent that once attended Harvard College. No surveyed freshman with a parental income of less than $40,000 said that his or her parent went to Harvard College, while 37 percent of those with a parental income of more than $500,000 said that at least one of their parents went to Harvard College. According to the College’s website, applicants with at least one parent alumnus “may receive an additional look” in the admissions process.</p>
+                <p>Freshmen who reported higher family incomes were more likely to have a parent who once attended Harvard College. No surveyed freshman with a parental income of less than $40,000 said that his or her parent went to Harvard College, while 37 percent of those with a parental income of more than $500,000 said that at least one of their parents went to Harvard College. According to the College’s website, applicants with at least one parent alumnus “may receive an additional look” in the admissions process.</p>
             </li>
             <li id="legacy-tab">
                 <h2>Legacy</h2>
@@ -141,7 +141,7 @@
                         <p>Forty-one percent of incoming freshmen come from the Northeast, with Westerners, Midwesterners, Southeasterners, and Southwesterners following in descending order. An additional 11 percent of surveyed freshmen hail from abroad.</p>
                     </div>
                     <div id="regions-right">
-                        <h2>Mouseover region to see data.</h2>
+                        <h2>Mouse over region to see data.</h2>
                         <div id="northeast" class="region">
                             <h3>
                                 <div class="region-stat">41.1%</div>
