--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -5,7 +5,7 @@
 
 		<title>The Harvard Crimson | Class of 2017</title>
 
-        <base href="http://localhost:8000/compiled_html/">
+        <base href="http://features.thecrimson.com/2014/freshman-survey/">
 
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700|Crimson|Colaborate" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="css/fresh.css">
