update title link

--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>The Harvard Crimson | Class of 2017</title>
+		<title>The Harvard Crimson | Class of 2018 By the Numbers</title>
 
         <base href="http://features.thecrimson.com/2014/freshman-survey/">
 
