apply correction to unites states chart

--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -138,7 +138,8 @@
                             class="year-switch-option selected" data-year="2018">2018</div>
                     </ul>
                     <div id="paper">
-                        <p>Forty-one percent of incoming freshmen come from the Northeast, with Westerners, Midwesterners, Southeasterners, and Southwesterners following in descending order. An additional 11 percent of surveyed freshmen hail from abroad.</p>
+                        <p>Forty-three percent of incoming freshmen come from the Northeast, with Westerners, Southwesterners, Southeasterners, and Midwesterners following in descending order. An additional 12 percent of surveyed freshmen hail from abroad.</p>
+                        <p><strong>CORRECTION: September 2, 2014</strong><br>An earlier version of the caption accompanying a graphic examining the geographic origins of the Class of 2018 incorrectly stated the percentage of surveyed students who reported being from the Northeast. In fact, 43 percent of respondents are from the Northeast. The caption also incorrectly stated that more respondents hailed from the Midwest than the Southwest and Southeast. In fact, the Midwest trailed all other regions.</p>
                     </div>
                     <div id="regions-right">
                         <h2>Mouse over region to see data.</h2>
@@ -172,20 +173,6 @@
                         </div>
                         <div id="midwest" class="region">
                             <h3>
-                                <div class="region-stat">7.8%</div>
-                                of students are from the Southwest.
-                            </h3>
-                            <h3>
-                                <div class="region-stat">1.3%</div>
-                                of students plan to live there after college.
-                            </h3>
-                            <h3>
-                                <div class="region-stat">10.0%</div>
-                                of students from the Southwest expect to return after graduating.
-                            </h3>
-                        </div>
-                        <div id="southwest" class="region">
-                            <h3>
                                 <div class="region-stat">13.8%</div>
                                 of students are from the Midwest.
                             </h3>
@@ -196,6 +183,20 @@
                             <h3>
                                 <div class="region-stat">18.6%</div>
                                 of students from the Midwest expect to return after graduating.
+                            </h3>
+                        </div>
+                        <div id="southwest" class="region">
+                            <h3>
+                                <div class="region-stat">7.8%</div>
+                                of students are from the Southwest.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">1.3%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">10.0%</div>
+                                of students from the Southwest expect to return after graduating.
                             </h3>
                         </div>
                         <div id="west" class="region">
